# 2324-4bhif-syp-project-franklyn

./: .gitignore  .gitmodules  docker-compose.yaml  flake.nix  report.md  session-ses_45de.md  session-ses_45e3.md
.github/workflows/: build-and-deploy.yaml  build-docker.yaml  build-openbox.yaml  build.yaml  deploy-to-oravm.yaml  test.yaml
asciidocs/docs/: multitest.adoc
asciidocs/docs/additional-documentation/: youtrack-diagram-by-stefnotch.adoc
asciidocs/docs/mom/: 2024-10-25.adoc  2025-01-31.adoc
asciidocs/slides/: index.adoc
asciidocs/slides/plantuml/: architecture.puml
cicd/: .env  daemon.json  docker-compose.yaml
ddos-tester/: .gitignore  Cargo.toml  README.md
ddos-tester/src/: lib.rs  main.rs
hugo/: default.nix
instructor-client/: package-lock.json  package.json
instructor-client/env/: environment.production.ts  environment.ts
instructor-client/src/: styles.css
instructor-client/src/app/: app.component.html  app.component.ts  app.routes.ts
instructor-client/src/app/components/entity-components/create-exam/: create-exam.component.html  create-exam.component.ts
instructor-client/src/app/components/entity-components/download-examinee/: download-examinee.component.css  download-examinee.component.html  download-examinee.component.ts
instructor-client/src/app/components/entity-components/exam/: exam.component.html  exam.component.ts
instructor-client/src/app/components/entity-components/exam-dashboard/: exam-dashboard.component.html  exam-dashboard.component.ts
instructor-client/src/app/components/entity-components/job/: job.component.css  job.component.html  job.component.ts
instructor-client/src/app/components/entity-components/patrol-page-examinee/: patrol-page-examinee.component.css  patrol-page-examinee.component.html  patrol-page-examinee.component.ts
instructor-client/src/app/components/entity-components/toast/: toast.component.css  toast.component.html  toast.component.ts
instructor-client/src/app/components/entity-components/video-examinee/: video-examinee.component.css  video-examinee.component.html  video-examinee.component.ts
instructor-client/src/app/components/entity-lists/exam-selection-list/: exam-selection-list.component.html  exam-selection-list.component.ts
instructor-client/src/app/components/entity-lists/examinee-download-list/: examinee-download-list.component.html  examinee-download-list.component.ts
instructor-client/src/app/components/entity-lists/examinee-list/: examinee-list.component.html  examinee-list.component.ts
instructor-client/src/app/components/entity-lists/job-list/: job-list.component.html  job-list.component.ts
instructor-client/src/app/components/router-components/create-test/: create-test.component.html  create-test.component.ts
instructor-client/src/app/components/router-components/edit-test-view/: edit-test-view.component.ts
instructor-client/src/app/components/router-components/metrics-dashboard/: metrics-dashboard.component.css  metrics-dashboard.component.html  (+1 more)
instructor-client/src/app/directives/: column-resize.directive.ts
instructor-client/src/app/model/: index.ts  model.ts
instructor-client/src/app/model/entity/: Exam.ts  ExamData.ts  SchoolUnit.ts  ServerMetrics.ts  Timer.ts
instructor-client/src/app/services/: exam.service.ts  examinee.service.ts  job.service.ts  schedule.service.ts  school-unit.service.spec.ts  school-unit.service.ts  store.service.ts  toast.service.ts  web-api.service.ts
nginx/: index.html
openbox/: Cargo.toml  build-appimage.sh  build.rs  build.sh  start-stress.sh  stop-stress.sh
openbox-dos/: Cargo.toml
openbox-dos/release-scripts/: Dockerfile
openbox-dos/src/: cache.rs  main.rs  mock_screen.rs  screen.rs  ws.rs
openbox/appimage/: Dockerfile  build-appimage-docker.sh  build.sh
openbox/release-scripts/: build.sh
openbox/src/: lib.rs  main.rs  screen.rs  ws.rs
openbox/src/theme/: logo.rs
proctor/: default.nix
sentinel/: default.nix
server/: default.nix  pom.xml
server/http-requests/: requests.http
server/src/main/docker/: Dockerfile
server/src/main/resources/: application.properties
(+93 files in other folders)
