[package]
name = "openbox"
version = "0.1.0"
edition = "2021"
authors = [ "aichingert" ]
license = "MIT"
description = "Openbox client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.8", features = ["multipart", "json"] }
xcap = "0.0.13"
image = "0.25.2"
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1.0", features = ["tokio"] }
http-body-util = { version = "0.1.0" }
tokio = { version = "1.40.0", features = ["full", "macros"] }
anyhow = "1.0.89"
futures = "0.3.31"
fastwebsockets = { version = "0.8.0", features = ["upgrade"] }
iced = { version = "0.13.1", features = ["tokio"] }
bytes = "1.7.2"
log = "0.4.22"
serde_json = "1.0.132"
serde = { version = "1.0.214", features = ["derive"] }
clap = { version = "4.5.28", features = ["derive"] }

# Only enable static openssl build on linux
[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[profile.release-opt]
inherits = "release"
codegen-units = 1
debug = false
lto = true
incremental = false
opt-level = 3
overflow-checks = false
strip = "debuginfo"

[features]
default = []
srv_prod = []
srv_staging = []
srv_ci = []
no_screencap = []
